<resources>
    <string name="app_name">Ditiezu</string>
    <string name="locale_default">English</string>
    <string name="locale_chinese">Chinese</string>
    <string name="locale_chinese_china">Chinese (China)</string>
    <string name="locale_chinese_hongkong_sar">Chinese (Hong Kong SAR)</string>
    <string name="category_title">Category</string>
    <string name="home_title">Home</string>
    <string name="notifications_title">Notifications</string>
    <string name="settings_title">Setting</string>
    <string name="loading_description">Loading…</string>
    <string name="threadList_title">THREAD TITLE</string>
    <string name="threadList_meta">THREAD META</string>
    <string name="title_reply">Reply</string>
    <string name="app_description">The story of the UnderGround</string>
    <string name="category_Beijing">Beijing</string>
    <string name="category_Tianjin">Tianjin</string>
    <string name="category_Shanghai">Shanghai</string>
    <string name="category_Guangzhou">Guangzhou</string>
    <string name="category_Changchun">Changchun</string>
    <string name="category_Dalian">Dalian</string>
    <string name="category_Wuhan">Wuhan</string>
    <string name="category_Chongqing">Chongqing</string>
    <string name="category_Shenzhen">Shenzhen</string>
    <string name="category_Nanjing">Nanjing</string>
    <string name="category_Chengdu">Chengdu</string>
    <string name="category_Shenyang">Shenyang</string>
    <string name="category_Foshan">Foshan</string>
    <string name="category_Xian">Xi\'an</string>
    <string name="category_Suzhou">Suzhou</string>
    <string name="category_Kunming">Kunming</string>
    <string name="category_Hangzhou">Hangzhou</string>
    <string name="category_Harbin">Harbin</string>
    <string name="category_Zhengzhou">Zhengzhou</string>
    <string name="category_Changsha">Changsha</string>
    <string name="category_Ningbo">Ningbo</string>
    <string name="category_Wuxi">Wuxi</string>
    <string name="category_Qingdao">Qingdao</string>
    <string name="category_Nanchang">Nanchang</string>
    <string name="category_Fuzhou">Fuzhou</string>
    <string name="category_Dongguan">Dongguan</string>
    <string name="category_Nanning">Nanning</string>
    <string name="category_Hefei">Hefei</string>
    <string name="category_Shijiazhuang">Shijiazhuang</string>
    <string name="category_Guiyang">Guiyang</string>
    <string name="category_Xiamen">Xiamen</string>
    <string name="category_Urumqi">Urumqi</string>
    <string name="category_Wenzhou">Wenzhou</string>
    <string name="category_Jinan">Jinan</string>
    <string name="category_Lanzhou">Lanzhou</string>
    <string name="category_Changzhou">Changzhou</string>
    <string name="category_Xuzhou">Xuzhou</string>
    <string name="category_Hohhot">Hohhot</string>
    <string name="category_Hongkong">Hong Kong</string>
    <string name="category_Macau">Macau</string>
    <string name="category_Taiwan">Taiwan</string>
    <string name="category_Oversea">Oversea</string>
    <string name="category_Comprehensive">Comprehensive</string>
    <string name="first_page">First Page</string>
    <string name="last_page">Last Page</string>
    <string name="prev_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="page_controller">Page Controller</string>
    <string name="avatar">Avatar</string>
    <string name="user_name">User Name</string>
    <string name="user_integral">User Integration: %1$d</string>
    <string name="level">Level</string>
    <string name="friends">Friends</string>
    <string name="replies">Replies</string>
    <string name="threads">Threads</string>
    <string name="placeholder_number" translatable="false">36</string>
    <string name="points">Points</string>
    <string name="prestige">Prestige</string>
    <string name="money">Money</string>
    <string name="m_score">M Score</string>
    <string name="popularity">Popularity</string>
    <string name="user_id">User Identifier</string>
    <string name="online_hour">Online Hours</string>
    <string name="online_hour_description">The time you spent on the bbs</string>
    <string name="login">Login</string>
    <string name="login_description">Login to have more features…</string>
    <string name="accept_terms">By clicking the button, I hereby agree the terms and privacy policy.</string>
    <string name="login_tips">Once the page is loaded, login into the website as default.</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Are you sure to logout %1$s?</string>
    <string name="logout_description">Log out the account</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="successful">Successful!</string>
    <string name="failed">Failed!</string>
    <string name="unread_notifications">Unread</string>
    <string name="read_notifications">Read</string>
    <string name="search_15s">Sorry.. You can only search once in specific time.</string>
    <string name="search_system_restriction">Sorry! System has a restriction of responding times</string>
    <string name="search">Search</string>
    <string name="no_notification">No More Notifications…</string>
    <string name="version">Version</string>
    <string name="new_version_detected">New Version Detected</string>
    <string name="share">Share</string>
    <string name="link">Link</string>
    <string name="reload">Reload</string>
    <string name="copied">Copied!</string>
    <string name="confirmUpdating">Confirm Updating</string>
    <string name="confirmUpdating_description">Once you confirm, we will start downloading and will ask you to install at once.</string>
    <string name="views">Views</string>
    <string name="all">All</string>
    <string name="category_Collection">Collection</string>
    <string name="category_City">City</string>
    <string name="category_Estate">Estate</string>
    <string name="category_Food">Collection</string>
    <string name="category_Market">Collection</string>
    <string name="category_Game">Collection</string>
    <string name="category_Conversation">Conversation</string>
    <string name="category_Railway">Railway</string>
    <string name="category_Knowledge">Knowledge</string>
    <string name="category_Suggestion">Knowledge</string>
    <string name="category_Announcement">Announcement</string>
    <string name="description_Collection" translatable="false">轨道交通模型、磁卡、票据等周边产品收藏交流区。</string>
    <string name="description_City" translatable="false">轨道交通城市风情生活展示区。</string>
    <string name="description_Estate" translatable="false">" 地铁周边房地产讨论及地铁建设动迁信息发布。"</string>
    <string name="description_Food" translatable="false">全国地铁城市地铁美食发布分享区。</string>
    <string name="description_Market" translatable="false">族友专属交易区，轨道交通周边产品及其他闲置物品。（商家绕道）</string>
    <string name="description_Game" translatable="false">城市及轨道交通类游戏讨论区</string>
    <string name="description_Conversation" translatable="false">闲谈杂侃版块，严禁灌水。</string>
    <string name="description_Railway" translatable="false">城际高速铁路路线、特色车站、国内外交通枢纽及转乘车站、城际铁路选线、城际铁路列车站。</string>
    <string name="description_Knowledge" translatable="false">地铁和轨道交通相关技术、知识发表讨论区。</string>
    <string name="description_Suggestion" translatable="false">意见建议、反馈中心</string>
    <string name="description_Announcement" translatable="false">站务公告中心</string>
    <string name="failed_retrieved">Failed Retrieved Content</string>
    <string name="keyword_not_match">Your search - %s - did not match any documents.</string>
    <string name="_1x" translatable="false">1x</string>
    <string name="_2x" translatable="false">2x</string>
    <string name="_3x" translatable="false">3x</string>
    <string name="_4x" translatable="false">4x</string>
    <string name="_5x" translatable="false">5x</string>
    <string name="_6x" translatable="false">6x</string>
    <string name="_7x" translatable="false">7x</string>
    <string name="tip_input_content">What about the weather…</string>
    <string name="edit">Edit</string>
    <string name="subject">Subject</string>
    <string name="selectType">Select Type</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="popularity_range">Range: -1 ~ 1</string>
    <string name="rest_score">Rest: %d</string>
    <string name="rate_title">Rate Reply</string>
    <string name="rate_description">By clicking confirm, you rate the reply.</string>
    <string name="require_reason">Reason is required</string>
    <string name="number_of_participants">Participants %s</string>
    <string name="reason">Reason</string>
    <string name="file_not_exist">File not exist</string>
    <string name="compress_failed">Compress Failed</string>
    <string name="signature">Signature</string>
    <string name="ad_app_id" translatable="false">ca-app-pub-2275811890061218~1899277240</string>
    <string name="ad_splash_id" translatable="false">ca-app-pub-2275811890061218/5969071118</string>
    <string name="history">History</string>
    <string name="discovery">Discovery</string>
    <string name="account">Account</string>
    <string name="post_record">Post Record</string>
    <string name="password">Password</string>
    <string name="answer">Answer</string>
    <string name="security_code">Security Code</string>
    <string name="tip_enter_code">Enter Security Code</string>
    <string name="tip_incorrect_code">Incorrect Code</string>
    <string name="tip_login_successfully">Login Successfully</string>
    <string name="welcome_user">You\'re login as %s, Welcome Here!</string>
    <string name="ignore_login">Skip Login</string>
    <string name="permission">Permission</string>
    <string name="everyone">Everyone</string>
    <string name="rewards">Rewards</string>
    <string name="none">None</string>
    <string name="new_thread">New Thread</string>
    <string name="gallery">Gallery</string>
    <string name="permission_range">Range 0 ~ 255</string>
    <string name="zero_rewards">0 means no reward</string>
    <string name="times">Times</string>
    <string name="max_times">Max Times</string>
    <string name="odds">Odds</string>
    <string name="max_rewards_time_range">Range 1 ~ 10</string>
    <string name="odds_range">Range 10% ~ 100%</string>
    <string name="not_a_number">Not A Number</string>
    <string name="rewards_title">Set rewards</string>
    <string name="rewards_description">Every user who replies to your post will get rewards according to your settings</string>
    <string name="permission_title">Set reading permissions</string>
    <string name="permission_description">Users who have not reached the read permission will not be able to read your post</string>
    <string name="invite">Invite</string>
    <string name="invite_title">Invite Users</string>
    <string name="invite_description">The system will send a reminder to the selected user</string>
    <string name="successful_and_fail_times">%d/%d (Succeed/Failed)</string>
    <string name="preview_on">Developer Preview</string>
    <string name="preview_description">Turning on preview mode means that you can use the complete new features, but the application may crash for some reasons. Please consider the update channel (stable/preview) after due consideration.</string>
    <string name="preview_title">Preview</string>
    <string name="donate">Donate</string>
    <string name="wechatpay" translatable="false">wechatpay</string>
    <string name="alipay" translatable="false">alipay</string>
    <string name="album_all_photo">所有照片</string>
    <string name="tvPhotoPreview">预览</string>
    <string name="ivOriginalCheckbox">原图</string>
    <string name="photo_content">图片</string>
    <string name="settings">设置</string>
    <string name="unknown">未知</string>
    <string name="acknowledge_content">感谢亲爱的苏苏! Mua~</string>
    <string name="request_sent">已发送请求</string>
    <string name="account_title">我</string>
</resources>