<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_title"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_category_24"
        android:title="@string/category_title" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications_title" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings_title" />

</menu>