<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.passionpenguin.ditiezu.ui.ThreadItemFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.passionpenguin.ditiezu.ui.CategoryFragment"
        android:label="@string/category_title"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.passionpenguin.ditiezu.ui.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.passionpenguin.ditiezu.ui.AccountFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_account" />
</navigation>