<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="3"
    android:layout_width="wrap_content"
    android:layout_height="36dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/ripple"
    android:backgroundTint="@color/surface">

    <TextView
        android:id="@+id/participantsNum"
        android:text="@string/number_of_participants"
        android:textSize="12sp"
        android:ellipsize="end"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark"
        android:layout_margin="@dimen/_8" />

    <LinearLayout
        android:layout_width="168dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/popularity"
            android:text="@string/popularity"
            android:textColor="@color/warning"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4"
            android:visibility="gone"
            android:gravity="center" />

        <TextView
            android:id="@+id/money"
            android:text="@string/money"
            android:textColor="@color/warning"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4"
            android:visibility="gone"
            android:gravity="center" />

        <TextView
            android:id="@+id/prestige"
            android:text="@string/prestige"
            android:textColor="@color/warning"
            android:textSize="12sp"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4"
            android:visibility="gone"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/reason"
        android:text="@string/reason"
        android:textColor="@color/dark"
        android:textSize="12sp"
        android:ellipsize="end"
        android:layout_width="@dimen/_128"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_8"
        android:gravity="center" />

</LinearLayout>