<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ==================================================
  ~ =  PROJECT     地下铁的故事
  ~ =  MODULE      地下铁的故事.app
  ~ =  FILE NAME   main_screen.xml
  ~ =  LAST MODIFIED BY PASSIONPENGUIN [1/5/21, 6:57 PM]
  ~ ==================================================
  ~ Copyright 2021 PassionPenguin. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ditiezu.android.views.MainScreenFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.ditiezu.android.views.category.CategoryFragment"
        android:label="@string/category_title"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ditiezu.android.views.notifications.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ditiezu.android.views.AccountFragment"
        android:label="@string/account_title"
        tools:layout="@layout/fragment_account" />
</navigation>