<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/categoryHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:contentDescription="@string/app_description"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:scaleType="centerCrop"
        android:alpha="0.2"
        android:contentDescription="@null"
        android:src="@drawable/bg_category"
        android:layout_marginTop="-24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp">

        <ImageView
            android:id="@+id/CategoryIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center|top"
            android:contentDescription="@string/app_name"
            android:src="@drawable/guangzhou" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/CategoryTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/category_title"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CategoryDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:scrollHorizontally="false"
                android:text="@string/app_description"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>