<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ==================================================
  ~ =  PROJECT     地下铁的故事
  ~ =  MODULE      地下铁的故事.app
  ~ =  FILE NAME   fragment_rate.xml
  ~ =  LAST MODIFIED BY PASSIONPENGUIN [1/5/21, 6:57 PM]
  ~ ==================================================
  ~ Copyright 2021 PassionPenguin. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/select_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@drawable/dialog_content_background"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/popularity"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/popularity_range"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/rest"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/rest_score"
            android:textSize="12sp"
            android:textColor="@color/success"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Spinner
        android:id="@+id/reasonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        app:layout_constraintTop_toBottomOf="@id/select_item" />

    <EditText
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:inputType="textShortMessage"
        android:autofillHints="@null"
        android:hint="@string/app_description"
        android:textSize="14sp"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/reasonList" />

</androidx.constraintlayout.widget.ConstraintLayout>